# scmli

./: .gitignore  .scmli.py.swp  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  scmli.py  setup.py  snippy
.github/workflows/: python-app.yml
conda-env/: meta.yaml
doc/: .aa.py.swp  NoIMET1_gRNAs.csv  aa.py  cmds.sh  cmds2.sh  example.md  parse_gRNA.py  result.html  search.py
libs/: common.py  grna.py  locate_gRNA.py  pcr_pipeline.py  plot.r  snippy  variant.py
scmli/: function.py  parse_gRNA.py  pcr_pipline.py  scmli.py
test/: NoIMET1_gRNAs.csv  counts.stats  filter.bed  percent.stats  targets.bed  test1.fq.gz_trimming_report.txt  test1.py  test1_fastqc.html  test1_val_1_fastqc.html  test2.fq.gz_trimming_report.txt  test2_fastqc.html  test2_val_2_fastqc.html  test_1.py  test_pcr.py  test_scmli.py
test/okl/: counts.stats  percent.stats  test1.fq.gz_trimming_report.txt  test1_fastqc.html  test1_val_1_fastqc.html  test2.fq.gz_trimming_report.txt  test2_fastqc.html  test2_val_2_fastqc.html
