[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scmli"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "biopython",
    "lxml",
    "pandas",
]

[project.scripts]
scmli = "scmli:main"

[tool.hatch.version]
path = "doc/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/doc",
]
